--- a/layout/index.html
+++ b/layout/index.html
@@ -1,13 +1,7 @@
-<!--A Design by W3layouts 
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html>
 <head>
-<title>Big shope A Ecommerce Category Flat Bootstarp Resposive Website Template | Home :: w3layouts</title>
+<title>Home</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!--theme-style-->
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
@@ -20,72 +14,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="js/jquery.min.js"></script>
 <!--script-->
 </head>
-<body> 
-	<!--header-->
-	<div class="header">
-		<div class="top-header">
-			<div class="container">
-				<div class="top-header-left">
-					<ul class="support">
-						<li><a href="#"><label> </label></a></li>
-						<li><a href="#">24x7 live<span class="live"> support</span></a></li>
-					</ul>
-					<ul class="support">
-						<li class="van"><a href="#"><label> </label></a></li>
-						<li><a href="#">Free shipping <span class="live">on order over 500</span></a></li>
-					</ul>
-					<div class="clearfix"> </div>
-				</div>
-				<div class="top-header-right">
-				 <div class="down-top">		
-						  <select class="in-drop">
-							  <option value="English" class="in-of">English</option>
-							  <option value="Japanese" class="in-of">Japanese</option>
-							  <option value="French" class="in-of">French</option>
-							  <option value="German" class="in-of">German</option>
-							</select>
-					 </div>
-					<div class="down-top top-down">
-						  <select class="in-drop">
-						  
-						  <option value="Dollar" class="in-of">Dollar</option>
-						  <option value="Yen" class="in-of">Yen</option>
-						  <option value="Euro" class="in-of">Euro</option>
-							</select>
-					 </div>
-					 <!---->
-					<div class="clearfix"> </div>	
-				</div>
-				<div class="clearfix"> </div>		
-			</div>
-		</div>
-		<div class="bottom-header">
-			<div class="container">
-				<div class="header-bottom-left">
-					<div class="logo">
-						<a href="index.html"><img src="images/logo.png" alt=" " /></a>
-					</div>
-					<div class="search">
-						<input type="text" value="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '';}" >
-						<input type="submit"  value="SEARCH">
 
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-				<div class="header-bottom-right">					
-						<div class="account"><a href="login.html"><span> </span>YOUR ACCOUNT</a></div>
-							<ul class="login">
-								<li><a href="login.html"><span> </span>LOGIN</a></li> |
-								<li ><a href="register.html">SIGNUP</a></li>
-							</ul>
-						<div class="cart"><a href="#"><span> </span>CART</a></div>
-					<div class="clearfix"> </div>
-				</div>
-				<div class="clearfix"> </div>	
-			</div>
-		</div>
-	</div>
-	<!---->
+<body> 
+	
+
 	<div class="container">
 			<div class="shoes-grid">
 			<a href="single.html">
@@ -98,7 +30,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<img class="img-responsive " src="images/bag.jpg" alt=" " />
 							</div>
 							<div class="col-md-7 banner-off">							
-								<h2>FLAT 50% 0FF</h2>
+								<h2>SALE 50% TOÀN GIAN HÀNG</h2>
 								<label>FOR ALL PURCHASE <b>VALUE</b></label>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>					
 								<span class="on-get">GET NOW</span>
