--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -4856,6 +4856,8 @@ section {
 }
 
 .au-breadcrumb2 {
+    padding-left: 20px;
+    padding-right: 20px;
     padding-top: 48px;
     padding-bottom: 50px;
 }
@@ -4896,6 +4898,8 @@ section {
 }
 
 .welcome2 {
+    padding-left:20px;
+    padding-right:20px;
     background: #393939;
 }
 
